# iot-hub-c-raspberrypi-getting-started

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.json  do_oclint.sh  gulpfile.js  package.json
.misc/: build.sh  buildOnUbuntu.md  setup.sh  toolchain-rpi.cmake
ClientApp/: README.md  config.json  gulpfile.js  package.json
ClientApp/app/: CMakeLists.txt  main.c  sensor.c  sensor.h
Lesson1/: README.md  config.json  gulpfile.js  package.json
Lesson1/app/: CMakeLists.txt  config.json  main.c  toolchain-rpi.make
Lesson3/: README.md  arm-template.json  config.json  gulpfile.js  package.json
Lesson3/app/: CMakeLists.txt  config.h  main.c
Lesson4/: README.md  config.json  gulpfile.js  package.json
Lesson4/app/: CMakeLists.txt  main.c
